# Simple-TensorRT

./: .gitignore  CMakeLists.txt  README.md  build.sh
doc/: annotated.html  classSimpleTensorrt-members.html  classSimpleTensorrt.html  classes.html  classst_1_1Tensor-members.html  classst_1_1Tensor.html  classst_1_1Tensor__coll__graph.map  classst_1_1Tensor__coll__graph.md5  dir_650ee533936399e683a30afb9473a469.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  simple__tensorrt_8h_source.html  structst_1_1CUDADeviceInfo-members.html  structst_1_1CUDADeviceInfo.html  structst_1_1Shape-members.html  structst_1_1Shape.html  tool_8h_source.html  type_8h_source.html
doc/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docker/: Dockerfile
examples/: CMakeLists.txt
examples/resnet50/: export_onnx.py  resnet50.cpp  resnet50_async.cpp
examples/yolov8_det/: yolov8_det.cpp
src/: simple_tensorrt.cpp  simple_tensorrt_impl.cpp  simple_tensorrt_impl.h  tool.cpp  utils_log.hpp
src/interface/: simple_tensorrt.h  tool.h  type.h
